Update 'backend-tests-python-zijflarz' component image to: quay.io/rhtap_qe/backend-tests-python-zijflarz:eddc1eab463eca88a3a38938d3fdd202e87ee396@sha256:4cc7fa9a5f0d50f7e0f5522e6bb6f52a3828ce7aa57a3aa2953c3fd2b05c3e0e

--- a/components/backend-tests-python-zijflarz/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-python-zijflarz/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-python-zijflarz
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-python-zijflarz:eddc1eab463eca88a3a38938d3fdd202e87ee396@sha256:4cc7fa9a5f0d50f7e0f5522e6bb6f52a3828ce7aa57a3aa2953c3fd2b05c3e0e
+          name: container-image
